Fixed styling on mobile and screen height

--- a/src/app/css/directions.component.css
+++ b/src/app/css/directions.component.css
@@ -3,5 +3,5 @@ agm-map {
 }
 
 #fh5co-started.fh5co-bg {
-  height: 100vh;
+  min-height: 100vh;
 }
