--- a/src/app/css/rsvp.component.css
+++ b/src/app/css/rsvp.component.css
@@ -3,7 +3,7 @@ select option {
 }
 
 #fh5co-started.fh5co-bg {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .already-registered {
